Quick alignment fix.

--- a/imagesel/static/style.css
+++ b/imagesel/static/style.css
@@ -50,7 +50,7 @@ tr {
 table {
   margin-left: auto;
   margin-right: auto;
-  /* width: 100%; */
+  width: 100%;
 }
 
 textarea
